// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <MultiTextInput /> rendering should render multi text correctly 1`] = `
<Header
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "itemClassName": "col-3",
      "name": "input-field-name",
      "placeholder": "type here",
    }
  }
  touched={false}
>
  <div>
    <input
      type="hidden"
      value={
        Array [
          "Lorem",
        ]
      }
    />
    <div
      key="input-field-name-1"
    >
      <Styled(Component)
        id="input-field-name"
        maxLength="15"
        name="input-field-name-1"
        onChange={[Function]}
        onKeyPress={[Function]}
        pattern="[0-9.,;]+"
        placeholder="type here"
        type="text"
        value="Lorem"
      />
    </div>
    <Styled(Component)
      onClick={[Function]}
      variant="textButton"
    />
  </div>
</Header>
`;

exports[`Form component <MultiTextInput /> rendering should render multi text without value correctly 1`] = `
<Header
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "name": "input-field-name",
      "placeholder": "type here",
    }
  }
  touched={false}
>
  <div>
    <input
      type="hidden"
    />
    <div
      key="input-field-name-1"
    >
      <Styled(Component)
        id="input-field-name"
        maxLength="15"
        name="input-field-name-1"
        onChange={[Function]}
        onKeyPress={[Function]}
        pattern="[0-9.,;]+"
        placeholder="type here"
        type="text"
        value=""
      />
    </div>
    <Styled(Component)
      onClick={[Function]}
      variant="textButton"
    />
  </div>
</Header>
`;

exports[`Form component <MultiTextInput /> rendering should render no multi text when not visible 1`] = `""`;
